fix: add z-index for react modal overlay

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -30,6 +30,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(201,201,201,0.8);
+    z-index: 1000;
 }
 
 .modal-container-portfolio {
